--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+0.004   2013-07-26
+    - Add documentation.
+
 0.003   2013-07-25
     - Make script be found and installed. 
 
