--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-    - Add documentation.
+    - Make sure that our split spf records
+      contain the protocol, v=spf1.
 
 0.004   2013-07-26
     - Add documentation.
