--- a/Changes
+++ b/Changes
@@ -1,6 +1,16 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - Make sure we can run the script on
+      the same zonefile again without
+      creating nonsense.
+    - Fix tests by not reading from the file,
+      but using a new return scalar value
+      from ->write. It used to return 1, now
+      it returns the string that will be
+      written out.
+
+0.005
     - Make sure that our split spf records
       contain the protocol, v=spf1.
 
