--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - BUG FIX: Master record strings need the
+      "include:" mechanism before each component.
+      This is a breaking bug, now fixed.
 
 0.012     2013-08-21
     - Please remember that addition and subtraction
