--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for {{$dist->name}}
 
+    - switch from List::AllUtils to List::Util (in core)
+
 0.019   2017-05-29
     - Fix tests again, not specific IPs, but just regexes 
 
