--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for {{$dist->name}}
 
+0.021   2019-08-06
+    - Switch to Moo/MooX::Options.
+
 0.020   2019-08-05
     - Remove _input_file, don't use to_IO_All coercion manually for simplicity.
     - switch from List::AllUtils to List::Util (in core): Thanks, Ether.
